RT-18909: Do not have <small> "Funding" paragraph

--- a/content/education/stem-programs/code-at-tacc/cybersecurity.html
+++ b/content/education/stem-programs/code-at-tacc/cybersecurity.html
@@ -671,7 +671,7 @@ th{
 			<h2 class="camp-subhead" style="margin:75px 0px 50px 0px; text-align:center;">
 				Funding</h2>
 			<p style="text-align:center">
-				<small>The camp was funded by the National Security Agency and the National Science Foundation.</small></p>
+				The camp was funded by the National Security Agency and the National Science Foundation.</p>
 			<!-- Gallery removed 2020-09 for "UTS 122 Guidelines […]"--><!-- SEE: https://www.utsystem.edu/sites/policy-library/policies/uts-122-guidelines-web-site-solicitations --><!--<style id="o-gallery-styles" type="text/css">
 	/*
 			Gallery (Object)
