--- a/content/education/stem-programs/code-at-tacc/robotics.html
+++ b/content/education/stem-programs/code-at-tacc/robotics.html
@@ -686,7 +686,7 @@ th{
 			<h2 class="camp-subhead" style="margin:75px 0px 50px 0px; text-align:center;">
 				Funding</h2>
 			<p style="text-align:center">
-				<small>The camp was funded with the generosity from the KLE Foundation.</small></p>
+				The camp was funded with the generosity from the KLE Foundation.</p>
 		</div>
 	</div>
 </div>
