RT-18909: Move Funding to section on `conncected`

--- a/content/education/stem-programs/code-at-tacc/connected.html
+++ b/content/education/stem-programs/code-at-tacc/connected.html
@@ -237,10 +237,6 @@ th{
 				All current 10th and 11th (rising 11th and 12th graders) high school students with prior computer programming experience are welcome to apply. Selected students will be accepted to participate in the virtual program.</p>
 			<p>
 				Students are expected to participate in Code@TACC Connected until the conclusion of the program. All students will be invited to participate in quarterly Back@TACC STEM workshops upon completion of the program.</p>
-			<hr />
-			<p>
-				<img src="/documents/1084364/1822769/BPlogo.png/" style="width: 75px; float: left; margin: 2px 15px 10px 0px;" /><br />
-				<i>The camp was funded with the generosity from BP Upstream Digital &amp; Technology.</i></p>
 		</div>
 		<div class="col-md-6">
 			<p class="centered" style="font-size:small; color:#999; margin-top:0px; margin-bottom:30px;">
@@ -646,6 +642,14 @@ th{
 				<p>
 					If a student's personal appearance or form of dress violates these standards, the student will be allowed to correct the problem. Many details and styles of clothing cannot be covered in the dress code; therefore, the administration (including counselors) of TACC reserves the right to make to final determination concerning appropriateness of a student's attire.</p>
 			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-sm-12">
+			<h2 class="camp-subhead" style="margin:75px 0px 50px 0px; text-align:center;">
+				Funding</h2>
+			<p style="text-align:center">
+				The camp was funded with the generosity from BP Upstream Digital &amp; Technology.</p>
 		</div>
 	</div>
 </div>
