Quick/RT-18909: Update rosie@tacc to ragomez@tacc

--- a/content/about/directory--full-time.html
+++ b/content/about/directory--full-time.html
@@ -567,7 +567,7 @@
 			<td>
 				<a href="/web/website/about/directory/rosalia-gomez">Gomez, Rosalia</a></td>
 			<td>
-				<a href="mailto:rosie@tacc.utexas.edu">rosie@tacc.utexas.edu</a></td>
+				<a href="mailto:ragomez@tacc.utexas.edu">ragomez@tacc.utexas.edu</a></td>
 			<td>
 				Education &amp; Outreach</td>
 		</tr>
