--- a/content/education/stem-programs.html
+++ b/content/education/stem-programs.html
@@ -193,7 +193,7 @@
 					<b>Rosalia Gomez</b><br />
 					Education &amp; Outreach Manager<br />
 					512-471-6785<br />
-					<a href="mailto:rosie@tacc.utexas.edu">rosie@tacc.utexas.edu</a></p>
+					<a href="mailto:ragomez@tacc.utexas.edu">ragomez@tacc.utexas.edu</a></p>
 			</div>
 			<div class="col-sm-3">
 				<p>
