RT-18909: Extract Code@TACC Styles

--- a/content/education/stem-programs/code-at-tacc/cybersecurity.html
+++ b/content/education/stem-programs/code-at-tacc/cybersecurity.html
@@ -1,309 +1,3 @@
-<style type="text/css">
-body {
-	background: #f4f4f4; /* Fallback */
-	background: linear-gradient(#f4f4f4, #dadada); /* Standard */
-}
-
-abbr[title] {
-	border-bottom: none;
-}
-
-p {
-	font-family: "Helvetica Neue","Helvetica",sans-serif;
-	line-height:1.5;
-	font-size:15px;
-}
-
-th{
-	font-weight:lighter;
-	font-size: 1em;
-}
-
-#retro-header-wrapper {
-	width:90%;
-	margin: 0px auto 0px auto;
-	padding:0px 5%;
-}
-
-#retro-header-div {
-	margin:0px;
-	padding:30px 0px;
-}
-
-#retro-body-wrapper {
-	width:90%;
-	margin: 0px auto 0px auto;
-	padding:50px 5%;
-}
-
-.headers{
-	padding-left: 30%;
-	position: relative;
-}
-
-.codetacc-head{
-	display: block;
-	margin-bottom: -18px;
-}
-
-.code-logo-ds{
-	margin-left: 12%;
-	width: 800px;
-}
-
-.designsafe{
-	font-size: 4em;
-	display: block;
-	margin-top: -30px;
-}
-
-.cybersecurity-logo{
-	text-transform: uppercase;
-	font-family:"HelveticaNeueLTStd-BdCn","Helvetica Neue","Helvetica", sans-serif;
-	text-align: center;
-	/* margin: 25px 0; */
-	font-size: 7em;
-}
-
-.code-at-tacc-logo{
-	width: 400px;
-	margin: 0 auto;
-}
-
-.panel{
-	border: 0 none;
-}
-
-.panel-default > .panel-heading{
-	background-image: none;
-	background-color: transparent;
-	border-bottom: 2px solid transparent;
-	color: #039;
-}
-
-.panel-title a{
-	color: #039;
-}
-
-
-
-.camp-dates {
-	color:#039;
-	font-size: 2.75em;
-	margin-top: 0px;
-	margin-bottom: 0px;
-	text-align: center;
-}
-
-.camp-subhead {
-	font-family:"HelveticaNeueLTStd-LtCn","Helvetica Neue","Helvetica",sans-serif;
-	color: rgb(0, 0, 0);
-	text-align:center;
-}
-h2.camp-subhead {
-	margin:75px 0px 50px 0px;
-}
-h4.camp-subhead {
-	margin: 10px 10px 30px 10px;
-}
-
-.camp-aside {
-	text-align: center;
-}
-
-
-
-.img-banners{
-	margin:0;
-	padding:0;
-	width:100%;
-	border:none;
-	text-align: center;
-
-}
-
-@media (max-width: 1200px) {
-	.rwd-codetacc{}
-
-	.rwd-designsafe{
-		font-size: 3em;
-	}
-
-	.rwd-dates{}
-
-}
-@media (max-width: 800px){
-	.rwd-codetacc{}
-
-	.rwd-designsafe{
-		font-size: 2em;
-		padding: 10px;
-	}
-
-	.cybersecurity-logo{
-		font-size: 2.5em;
-	}
-
-	.rwd-dates{}
-
-	.code-logo-ds{
-	margin-left: 0;
-
-
-	}
-	.code-main-logo{
-		width: 400px;
-	}
-
-	.img-banners{
-		margin-bottom: 20px;
-	}
-}
-
-@media (max-width: 480px) {
-	.rwd-codetacc{
-		font-size: 20px;
-	}
-
-	.rwd-designsafe{
-		font-size: 1em;
-		padding-top: 10px;
-	}
-
-	.rwd-dates{
-		font-size:1.5em;
-	}
-
-	.code-logo-ds{
-		margin-left:0;
-
-	}
-	.code-main-logo{
-			width: 400px;
-	}
-	.cybersecurity-logo{
-		font-size: 2em;
-	}
-
-	.directions{
-		border-top: 1px solid lightgrey;
-		padding-top: 15px;
-	}
-
-	.img-banners{
-		margin-bottom: 20px;
-	}
-}
-
-
-
-/*
-Data Banner
-
-A banner with columns of data.
-
-Warning: Relies on Bootstrap
-
-Markup:
-<div class="row  data-banner">
-	<!-- Single Column -->
-	<div class="col-md-4  data-banner__column" />
-
-	<!-- Single Column: Short Big Content -->
-	<div class="col-md-4  data-banner__column">
-		<h2>
-			<span class="data-banner__title">Heading</span>
-			<span class="data-banner__title-content">Simple Value</span>
-		</h2>
-	</div>
-
-	<!-- Single Column: Long Normal Content -->
-	<div class="col-md-4  data-banner__column">
-		<h2><span class="data-banner__title">Heading</span></h2>
-		<p class="data-banner__content">Long message about something.</p>
-	</div>
-
-	<!-- Multi-Column -->
-	<div class="col-md-4  data-banner__column" />
-	<div class="col-md-4  data-banner__column data-banner__center-column" />
-	<div class="col-md-4  data-banner__column" />
-</div>
-*/
-.data-banner {
-	margin: 30px 0px 50px 0px;
-	border: solid 1px #000000;
-	text-align: center;
-}
-.data-banner__column {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-
-	border-style: solid;
-	border-color: #3e3e3e;
-	border-width: 0; /* SEE: @media query for when which width is turned on */
-}
-.data-banner__title {
-	display: inline-block;
-	border-bottom: 1px solid #000000;
-}
-h2.data-banner__title {
-	margin: 0 auto;
-}
-
-/* FAQ: This markup exists because not all `tacc-new-theme:/…/tacc-base.css` `h2` styles do not affect `.h2` (which would have allowed markup `<p class="data-banner__content  h2">`), and changing them to do so now (a) could have unexpected consequences and (b) requires deploy which is to be limited to only as necessary. */
-h2 > .data-banner__title {
-	display: inline-block;
-}
-h2 > .data-banner__title + a.data-banner__title-content,
-h2 > .data-banner__title + span.data-banner__title-content {
-	display: block;
-}
-
-/* Borders for center column */
-/* WARNING: Only three columns are supported */
-/* FAQ: More columns with these styles cause double borders and diff. heights */
-/* Wide */ @media only screen and (min-width: 992px) {
-	[class*="col-md"].data-banner__center-column {
-		border-width: 0 1px;
-	}
-	.data-banner { padding: 30px; }
-	.data-banner__content,
-	.data-banner__title-content { margin-top: 1em; }
-}
-/* Narrow */ @media only screen and (max-width: 991px) {
-	[class*="col-md"].data-banner__center-column {
-		border-width: 1px 0;
-
-		margin: 30px 0;
-		padding: 10px 0 15px;
-	}
-	.data-banner { padding: 15px 30px; }
-	.data-banner__content,
-	.data-banner__title-content { margin-top: 0.5em; }
-}
-
-
-
-/*
-Info List
-
-A banner with columns of data.
-
-Warning: Relies on Bootstrap
-
-Markup:
-<ul class="info-list">
-	<li>Apples are good for you.</li>
-	<li>Buttons will be the end of you.</li>
-	<li>Calamity befalls those who don't follow the rules.</li>
-</ul>
-*/
-.info-list {
-	text-align: center;
-	list-style: none;
-}
-</style>
 <div class="container" id="retro-header-wrapper">
 	<div class="row" id="retro-header-div">
 		<div class="col-sm-12">
@@ -313,7 +7,7 @@ Markup:
 		</div>
 		<div class="col-sm-12">
 			<header>
-				<div class="cybersecurity-logo">
+				<div class="camp-name">
 					GenCyber@TACC</div>
 			</header>
 		</div>
