--- a/content/education/stem-programs/code-at-tacc/robotics.html
+++ b/content/education/stem-programs/code-at-tacc/robotics.html
@@ -35,11 +35,11 @@
 	<div class="row">
 		<div class="col-md-6">
 			<p>
-				Code@TACC is an innovative and exciting summer program that incorporates a project-based learning approach to expose students to Science, Technology, Engineering, and Math (STEM) applications. Students foster their talent and creativity by being introduced to programming, robotics, and electronics.</p>
+				Code@TACC is an innovative and exciting virtual summer program that incorporates a project-based learning approach to expose students to Science, Technology, Engineering, and Math (STEM) applications. Students foster their talent and creativity by being introduced to programming, robotics, and electronics.</p>
 			<p>
-				All current 9th and 10th grade (rising 10th and 11th grade) high school students are welcome to apply. We encourage the participation of students traditionally underrepresented in STEM. Selected students will be accepted to participate in the virtual program.</p>
+				All current 9th and 10th grade (rising 10th and 11th grade) high school students are welcome to apply. We encourage the participation of students traditionally underrepresented in STEM. Selected students will receive a self-driving robotic vehicle that they can design and program to drive at home.</p>
 			<p>
-				Students are expected to participate in Code@TACC until the conclusion of the program. All students will be invited to participate in quarterly Back@TACC <abbr title="Science, Technology, Engineering, and Mathematics">STEM</abbr> workshops upon completion of the program.</p></div>
+				Students are expected to participate in Code@TACC Monday - Friday until the conclusion of the program. All students will be invited to participate in quarterly Back@TACC <abbr title="Science, Technology, Engineering, and Mathematics">STEM</abbr> workshops upon completion of the program.</p></div>
 		<div class="col-md-6">
 			<p class="centered">
 				<img alt="A student receiving her certificate upon completion of the Code@TACC camp from one of the camp teachers" class="img-responsive" src="/documents/1084364/1836493/robotics-3.jpeg/" /></p>
@@ -56,14 +56,11 @@
 		<div class="col-md-4  data-banner__column data-banner__center-column">
 			<h2>
 				<span class="data-banner__title">Application</span>
-				<!--2020-04-21: Camps closed --><!--
-				<a class="data-banner__title-content" href="https://utexas.qualtrics.com/jfe/form/SV_0pNf0igeJJ2LCAZ" target="_blank">Apply Here</a>-->
+				<a class="data-banner__title-content" href="https://utexas.qualtrics.com/jfe/form/SV_3ZUZzYPgkW6suOx" target="_blank">Apply Here</a>
 			</h2>
-			<!--2020-04-21: Camps closed --><!--
 			<p class="data-banner__content  small">
-				Application closes April 24, 2020<br />
-				We will update be notified of acceptance on May 8, 2020</p>
-			-->
+				Application closes April 26, 2021<!--<br />
+				We will update be notified of acceptance on May 8, 2020--></p>
 			<p class="data-banner__content  small">
 				Out of concern for the health and safety of our community, all TACC summer programs including Code@TACC, will be hosted virtually in 2021.</p>
 		</div>
@@ -90,11 +87,9 @@
 					<li>
 						Use a project based-learning approach to foster creativity and problem solving skills</li>
 					<li>
-						Engage in team-building that will prepare students for the workplace of the future Use hands-on technology to learn the basics of embedded programming languages and electronics</li>
+						Use hands-on technology to learn the basics of embedded programming languages and electronics</li>
 					<li>
-						Participate in a field trip to a local tech company</li>
-					<li>
-						Get a private virtual tour of the TACC Visualization Laboratory (Vislab) and data center</li>
+						Get a private virtual tour of the TACC Visualization Lab and data center</li>
 					<li>
 						Interact with TACC's cutting-edge technology systems</li>
 					<li>
@@ -209,7 +204,7 @@
 					</div>
 					<div aria-labelledby="dates" class="panel-collapse collapse" id="dates-answer" role="tabpanel">
 						<div class="panel-body">
-							<b>A:</b> June 7 – June 18, 2021</div>
+							<b>A:</b> June 7 – June 18, 2021. Sessions will be Monday - Friday. No sessions will be held over the weekend.</div>
 					</div>
 				</div>
 				<div class="panel panel-default">
@@ -259,7 +254,7 @@
 					</div>
 					<div aria-labelledby="contact" class="panel-collapse collapse" id="contact-answer" role="tabpanel">
 						<div class="panel-body">
-							<b>A:</b> Please email our office at <a href="mailto:outreach@tacc.utexas.edu" target="_blank">outreach@tacc.utexas.edu</a> or call 512-232-0831.</div>
+							<b>A:</b> Please email our office at <a href="mailto:outreach@tacc.utexas.edu" target="_blank">outreach@tacc.utexas.edu</a> or call english: 512-232-0831, español: 512-368-7890.</div>
 					</div>
 				</div>
 				<div class="panel panel-default">
