--- a/content/education/stem-programs/code-at-tacc/connected.html
+++ b/content/education/stem-programs/code-at-tacc/connected.html
@@ -165,7 +165,7 @@
 					</div>
 					<div aria-labelledby="dates" class="panel-collapse collapse" id="dates-answer" role="tabpanel">
 						<div class="panel-body">
-							<b>A:</b> July 26 – August 6, 2021</div>
+							<b>A:</b> July 26 – August 6, 2021. Sessions will be Monday - Friday. No sessions will be held over the weekend.</div>
 					</div>
 				</div>
 				<div class="panel panel-default">
@@ -215,7 +215,7 @@
 					</div>
 					<div aria-labelledby="contact" class="panel-collapse collapse" id="contact-answer" role="tabpanel">
 						<div class="panel-body">
-							<b>A:</b> Please email our office at <a href="mailto:outreach@tacc.utexas.edu" target="_blank">outreach@tacc.utexas.edu</a> or call 512-232-0831.</div>
+							<b>A:</b> Please email our office at <a href="mailto:outreach@tacc.utexas.edu" target="_blank">outreach@tacc.utexas.edu</a> or call english: 512-232-0831, español: 512-368-7890.</div>
 					</div>
 				</div>
 				<div class="panel panel-default">
