RT-19145: Image updates and tweaks

--- a/content/education/stem-programs/code-at-tacc/cybersecurity.html
+++ b/content/education/stem-programs/code-at-tacc/cybersecurity.html
@@ -74,8 +74,8 @@
 	<small><!-- Prospective Activities --></small>
 	<div class="row">
 		<div class="col-md-6 col-xs-12">
-			<p>
-				<small><img alt="Students look at video screen" class="img-responsive" src="/documents/1084364/1836493/cybersecurity-3.jpg/" /></small></p>
+			<p class="centered">
+				<img alt="Students look at video screen" class="img-responsive" src="/documents/1084364/1836493/cybersecurity-3.jpg/" /></p>
 		</div>
 		<div class="col-md-6 col-xs-12">
 			<h4 class="camp-subhead">
