--- a/content/education/stem-programs/code-at-tacc/robotics.html
+++ b/content/education/stem-programs/code-at-tacc/robotics.html
@@ -25,24 +25,24 @@
 	<div class="row">
 		<div class="col-md-6">
 			<p class="centered">
-				<img alt="Two female students working on a robotics project" class="img-responsive" src="/documents/1084364/1836493/robotics-1.jpeg/" /></p>
+				<img alt="One male student working on a robotics project" class="img-responsive" src="/documents/1084364/1967140/robotics-2--square.jpg/" /></p>
 		</div>
 		<div class="col-md-6">
 			<p class="centered">
-				<img alt="Group photo of Code at TACC participants" class="img-responsive" src="/documents/1084364/1836493/robotics-2.jpeg/" /></p>
+				<img alt="One female student working on a robotics project" class="img-responsive" src="/documents/1084364/1967140/robotics-3.jpg/" /></p>
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-md-6">
+		<div class="col-md-8">
 			<p>
 				Code@TACC is an innovative and exciting virtual summer program that incorporates a project-based learning approach to expose students to Science, Technology, Engineering, and Math (STEM) applications. Students foster their talent and creativity by being introduced to programming, robotics, and electronics.</p>
 			<p>
 				All current 9th and 10th grade (rising 10th and 11th grade) high school students are welcome to apply. We encourage the participation of students traditionally underrepresented in STEM. Selected students will receive a self-driving robotic vehicle that they can design and program to drive at home.</p>
 			<p>
 				Students are expected to participate in Code@TACC Monday - Friday until the conclusion of the program. All students will be invited to participate in quarterly Back@TACC <abbr title="Science, Technology, Engineering, and Mathematics">STEM</abbr> workshops upon completion of the program.</p></div>
-		<div class="col-md-6">
+		<div class="col-md-4">
 			<p class="centered">
-				<img alt="A student receiving her certificate upon completion of the Code@TACC camp from one of the camp teachers" class="img-responsive" src="/documents/1084364/1836493/robotics-3.jpeg/" /></p>
+				<img alt="One male student testing a robotics project" class="img-responsive" src="/documents/1084364/1967140/robotics-1.jpg/" /></p>
 		</div>
 	</div>
 	<!-- Short Info about camp -->
@@ -73,11 +73,11 @@
 	</div>
 	<!-- Prospective Activities -->
 	<div class="row">
-		<div class="col-md-6 col-xs-12">
-			<p>
-				<img alt="A teacher assisting two students as they experiment with their robotic project" class="img-responsive" src="/documents/1084364/1836493/robotics-4.jpeg/" /></p>
+		<div class="col-md-4 col-xs-12">
+			<p class="centered">
+				<img alt="One female student testing a robotics project" class="img-responsive" src="/documents/1084364/1967140/robotics-4--tall.jpg/" /></p>
 		</div>
-		<div class="col-md-6 col-xs-12">
+		<div class="col-md-8 col-xs-12">
 			<h4 class="camp-subhead">
 				PROSPECTIVE ACTIVITIES</h4>
 			<div class="col-md-12">
