RT-19134: Connected Page Text Update
And update the other two similar pages, for consistency.

--- a/content/education/stem-programs/code-at-tacc/connected.html
+++ b/content/education/stem-programs/code-at-tacc/connected.html
@@ -30,11 +30,11 @@
 	<div class="row">
 		<div class="col-md-6">
 			<p>
-				Connected is an innovative and exciting summer program that lets students explore where coding meets communities. Students will create models of solutions for social and societally relevant problems that use networked sensors and the cloud. Learn how data can be used to tell a science story.</p>
+				Connected is an innovative and exciting virtual summer program that lets students explore where coding meets communities. Students will use networked sensors to collect data and create models for environmental relevant problems. During the camp, you will learn how data can be used to tell a science story.</p>
 			<p>
-				All current 10th and 11th (rising 11th and 12th graders) high school students with prior computer programming experience are welcome to apply. Selected students will be accepted to participate in the virtual program.</p>
+				All current 10th and 11th (rising 11th and 12th graders) high school students with prior electronics or computer programming experience are welcome to apply. Selected students will receive a kit of supplies to create a sensor that collects environmental data.</p>
 			<p>
-				Students are expected to participate in Code@TACC Connected until the conclusion of the program. All students will be invited to participate in quarterly Back@TACC STEM workshops upon completion of the program.</p>
+				Students are expected to participate in Code@TACC Connected Monday through Friday until the conclusion of the program. All students will be invited to participate in quarterly Back@TACC <abbr title="Science, Technology, Engineering, and Mathematics">STEM</abbr> workshops upon completion of the program.</p>
 		</div>
 		<div class="col-md-6">
 			<p class="centered">
@@ -52,9 +52,11 @@
 		<div class="col-md-4  data-banner__column data-banner__center-column">
 			<h2>
 				<span class="data-banner__title">Application</span>
-				<!--2020-04-21: Camps closed --><!--
-				<a class="data-banner__title-content" href="https://utexas.qualtrics.com/jfe/form/SV_6Lig8V6pISJjdUp" target="_blank">Apply Here</a>-->
+				<a class="data-banner__title-content" href="https://utexas.qualtrics.com/jfe/form/SV_bQPUEIPTAbT80zH" target="_blank">Apply Here</a>
 			</h2>
+			<p class="data-banner__content  small">
+				Application closes May 17, 2021<!--<br />
+				We will update be notified of acceptance on May 8, 2020--></p>
 			<!--2020-04-21: Camps closed --><!--
 			<p class="data-banner__content  small">
 				Participants will be notified by May 15, if they were selected to participate in the program.</p>
@@ -83,13 +85,9 @@
 					<li>
 						Work in a project-based learning environment</li>
 					<li>
-						Engage in team-building that will prepare students for the workplace of the future</li>
-					<li>
 						Use sensor networks to collect data</li>
 					<li>
-						Get a private virtual tour at the TACC Visualization Laboratory (Vislab) and data center</li>
-					<li>
-						Interact with TACC's cutting-edge technology systems</li>
+						Get a private virtual tour at the TACC Visualization Laboratory and data center</li>
 					<li>
 						Collaborate with peers, college students, scientists, researchers and engineers</li>
 				</ul>
