--- a/content/education/stem-programs/code-at-tacc/cybersecurity.html
+++ b/content/education/stem-programs/code-at-tacc/cybersecurity.html
@@ -61,6 +61,14 @@
 			</h2>
 			<!--2020-04-21: Camps closed --><!--
 			<p class="data-banner__content  small">
+				Application closes April 26, 2021<br />
+				We will update be notified of acceptance on May 8, 2020</p>-->
+			<!--2020-04-21: Camps closed --><!--
+			<p class="data-banner__content  small">
+				Participants will be notified by May 15, if they were selected to participate in the program.</p>
+			-->
+			<!--2020-04-21: Camps closed --><!--
+			<p class="data-banner__content  small">
 				Participants will be notified by May 1, if they were selected to participate in the program. Application closes on April 20, 2020.</p>
 			-->
 		</div>
