--- a/content/education/stem-programs/code-at-tacc/robotics.html
+++ b/content/education/stem-programs/code-at-tacc/robotics.html
@@ -57,6 +57,10 @@
 			<p class="data-banner__content  small">
 				Application closes April 26, 2021<!--<br />
 				We will update be notified of acceptance on May 8, 2020--></p>
+			<!--2020-04-21: Camps closed --><!--
+			<p class="data-banner__content  small">
+				Participants will be notified by May 15, if they were selected to participate in the program.</p>
+			-->
 			<p class="data-banner__content  small">
 				Out of concern for the health and safety of our community, all TACC summer programs including Code@TACC, will be hosted virtually in 2021.</p>
 		</div>
